<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/spacing_large"
            android:text="@string/set_your_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_hard" />

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="@dimen/spacing_middle"
                android:src="@drawable/ic_close"
                android:tint="@color/grey_hard"
                android:contentDescription="TODO" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_name"
                    android:maxLines="1"
                    android:minHeight="50dp"
                    android:minWidth="300dp"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large"
                    android:singleLine="true"
                    android:textColor="@color/material_grey_800" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_save"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_medium"
                android:minHeight="?attr/actionBarSize"
                android:text="@string/setname_save"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</LinearLayout>